apps/base/bytestash/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bytestash
  labels:
    goldilocks.fairwinds.com/enabled: "true"
