apps/base/bytestash/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bytestash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bytestash
  template:
    metadata:
      labels:
        app: bytestash
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: bytestash
          image: ghcr.io/jordan-dalby/bytestash:latest
          ports:
            - containerPort: 5000
              name: http
          volumeMounts:
            - mountPath: /data/snippets
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: bytestash-data-pvc
