apps/base/bytestash/networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: bytestash
spec:
  ports:
    - port: 5000
      targetPort: 5000
      name: http
      protocol: TCP
  selector:
    app: bytestash
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bytestash-ingress
  namespace: bytestash
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.kubernetes.io/ignore: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: "bytestash.dimarco-server.site"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bytestash
                port:
                  name: http
  tls:
    - hosts:
        - "bytestash.dimarco-server.site"
      secretName: bytestash-tls
